[tool.poetry]
name = "selene-quick-start"
version = "0.1.0"
description = ""
authors = ["Alsu Fayzullina <alsufayzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "^1.0.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
