[tool.poetry]
name = "selene-project"
version = "0.1.0"
description = ""
authors = ["Alsu Fayzullina <alsufayzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
selene = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
